--- a/index.html
+++ b/index.html
@@ -752,7 +752,11 @@
               </div>
             </div>
           </div>
-          <form action="" class="contact_form grid">
+          <form
+            action="https://formspree.io/f/xpwqjvvr"
+            method="post"
+            class="contact_form grid"
+          >
             <div class="contact_inputs grid">
               <div class="contact_content">
                 <label for="" class="contact_label">Name</label>
