--- a/index.html
+++ b/index.html
@@ -227,15 +227,7 @@
                     <span class="skills_percentage skills_css"></span>
                   </div>
                 </div>
-                <div class="skills_data">
-                  <div class="skills_titles">
-                    <h3 class="skills_name">Java Script</h3>
-                    <span class="skills_number">65%</span>
-                  </div>
-                  <div class="skills_bar">
-                    <span class="skills_percentage skills_js"></span>
-                  </div>
-                </div>
+
                 <div class="skills_data">
                   <div class="skills_titles">
                     <h3 class="skills_name">React</h3>
@@ -267,15 +259,7 @@
                     <span class="skills_percentage skills_php"></span>
                   </div>
                 </div>
-                <div class="skills_data">
-                  <div class="skills_titles">
-                    <h3 class="skills_name">Node JS</h3>
-                    <span class="skills_number">70%</span>
-                  </div>
-                  <div class="skills_bar">
-                    <span class="skills_percentage skills_node"></span>
-                  </div>
-                </div>
+
                 <div class="skills_data">
                   <div class="skills_titles">
                     <h3 class="skills_name">My SQL</h3>
@@ -406,7 +390,7 @@
                   <span class="qualification_subtitle">Pre - College</span>
                   <div class="qualification_calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2017 - 2018
+                    2016 - 2017
                   </div>
                 </div>
                 <div>
@@ -426,7 +410,7 @@
                   <span class="qualification_subtitle">Schooling</span>
                   <div class="qualification_calendar">
                     <i class="uil uil-calendar-alt"></i>
-                    2013 - 2017
+                    2013 - 2016
                   </div>
                 </div>
               </div>
@@ -741,7 +725,7 @@
               <i class="uil uil-envelope contact_icon"></i>
               <div>
                 <h3 class="contact_title">Email</h3>
-                <span class="contact_subtitle">harishm@gamil.com</span>
+                <span class="contact_subtitle">harigowda508@gamil.com</span>
               </div>
             </div>
             <div class="contact_information">
