--- a/index.html
+++ b/index.html
@@ -95,33 +95,7 @@
               </a>
             </div>
             <div class="home_img">
-              <svg
-                class="home_blob"
-                viewBox="0 0 200 200"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <!-- Define the blob shape -->
-                <path
-                  class="home_blob-shape"
-                  d="M47.2,-29.8C54.4,-14.7,49,5.2,39,26.4C29,47.6,14.5,70.1,-2.3,71.4C-19.1,72.7,-38.1,52.9,-51.5,29.7C-64.8,6.6,-72.5,-19.9,-63,-36.3C-53.5,-52.7,-26.7,-59,-3.4,-57.1C20,-55.1,39.9,-44.9,47.2,-29.8Z"
-                  transform="translate(100 100)"
-                />
-
-                <!-- Define a clip path for the image -->
-                <clipPath id="blobClip">
-                  <path
-                    d="M47.2,-29.8C54.4,-14.7,49,5.2,39,26.4C29,47.6,14.5,70.1,-2.3,71.4C-19.1,72.7,-38.1,52.9,-51.5,29.7C-64.8,6.6,-72.5,-19.9,-63,-36.3C-53.5,-52.7,-26.7,-59,-3.4,-57.1C20,-55.1,39.9,-44.9,47.2,-29.8Z"
-                    transform="translate(100 100)"
-                  />
-                </clipPath>
-
-                <!-- Add the image and apply the clip -->
-                <image
-                  class="home_blob-img"
-                  href="images/Harish1.png"
-                  clip-path="url(#blobClip)"
-                />
-              </svg>
+              <img src="images/Harish-DP.jpg" alt="" />
             </div>
 
             <div class="home_data">
@@ -252,7 +226,7 @@
               <div class="skills_list grid">
                 <div class="skills_data">
                   <div class="skills_titles">
-                    <h3 class="skills_name">PHP</h3>
+                    <h3 class="skills_name">Oracle</h3>
                     <span class="skills_number">80%</span>
                   </div>
                   <div class="skills_bar">
@@ -696,14 +670,20 @@
             <div class="project_data">
               <h2 class="project_title">You have a new Project</h2>
               <p class="project_description">
-                Contact me now and get a 30% discount on your new project.
+                "Have a fresh idea in mind? Let’s bring it to life! Contact me
+                now and enjoy an exclusive 30% discount on your new project.
+                Let’s build something amazing together!".
               </p>
               <a href="#contact" class="button button--flex button--white">
                 Contact Me
                 <i class="uil uil-message project_icon button_icon"></i>
               </a>
             </div>
-            <img src="images/Harish1.png" alt="" class="project_img" />
+            <img
+              src="images/Harish-DP -Project.png"
+              alt=""
+              class="project_img"
+            />
           </div>
         </div>
       </section>
