--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               </a>
             </div>
             <div class="home_img">
-              <img src="images/Harish-DP -Project.png" alt="" />
+              <img src="images/Harish1.png" alt="" />
             </div>
 
             <div class="home_data">
