--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
                 <div class="skills_data">
                   <div class="skills_titles">
-                    <h3 class="skills_name">My SQL</h3>
+                    <h3 class="skills_name">MS SQL</h3>
                     <span class="skills_number">90%</span>
                   </div>
                   <div class="skills_bar">
