--- a/index.html
+++ b/index.html
@@ -369,25 +369,9 @@
                 </div>
                 <div>
                   <span class="qualification_rounder"></span>
-                  <span class="qualification_line"></span>
                 </div>
               </div>
               <!-- ========================== QUALIFICATION 4 ====================-->
-              <div class="qualification_data">
-                <div></div>
-                <div>
-                  <span class="qualification_rounder"></span>
-                  <!-- <span class="qualification_line"></span> -->
-                </div>
-                <div>
-                  <h3 class="qualification_title">High School</h3>
-                  <span class="qualification_subtitle">Schooling</span>
-                  <div class="qualification_calendar">
-                    <i class="uil uil-calendar-alt"></i>
-                    2013 - 2016
-                  </div>
-                </div>
-              </div>
             </div>
             <!-- ========================== QUALIFICATION CONTENT 2 ====================-->
             <div class="qualification_content" data-content id="work">
@@ -411,10 +395,12 @@
                 <div></div>
                 <div>
                   <span class="qualification_rounder"></span>
-                  <span class="qualification_line"></span>
+                  <!-- <span class="qualification_line"></span> -->
                 </div>
                 <div>
-                  <h3 class="qualification_title">Software Developer</h3>
+                  <h3 class="qualification_title">
+                    Software Developer (Intern)
+                  </h3>
                   <span class="qualification_subtitle"
                     >SHIASH INFOTECH SOLUTIONS</span
                   >
@@ -425,24 +411,6 @@
                 </div>
               </div>
               <!-- ========================== QUALIFICATION 3 ====================-->
-              <div class="qualification_data">
-                <div>
-                  <h3 class="qualification_title">
-                    Full Stack Developer (Intern)
-                  </h3>
-                  <span class="qualification_subtitle"
-                    >SHIASH INFOTECH SOLUTIONS</span
-                  >
-                  <div class="qualification_calendar">
-                    <i class="uil uil-calendar-alt"></i>
-                    2021 - 2022
-                  </div>
-                </div>
-                <div>
-                  <span class="qualification_rounder"></span>
-                  <!-- <span class="qualification_line"></span> -->
-                </div>
-              </div>
             </div>
           </div>
         </div>
