--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
-
+     <link rel="icon" href="images/harish-icon.jpg" />
     <!-- ========================== SWIPER CSS ====================-->
     <link rel="stylesheet" href="swiper-bundle.min.css" />
     <!-- ========================== CSS ====================-->
     <link rel="stylesheet" href="index.css" />
-    <title>Portfolio</title>
+    <title>Harish Profile</title>
   </head>
   <body>
     <!-- ========================== HEADER ====================-->
