--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- ========================== HEADER ====================-->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav_logo">Harish</a>
+        <a href="#" class="nav_logo"><img src="images/harish-icon.jpg" /> </a>
         <div class="nav_menu" id="nav-menu">
           <ul class="nav_list grid">
             <li class="nav_item">
