--- a/index.html
+++ b/index.html
@@ -714,10 +714,10 @@
               ></textarea>
             </div>
             <div>
-              <a href="" class="button button--flex">
+              <button type="submit" class="button button--flex">
                 Send Message
                 <i class="uil uil-message button_icon"></i>
-              </a>
+              </button>
             </div>
           </form>
         </div>
