--- a/index.html
+++ b/index.html
@@ -692,21 +692,21 @@
             <div class="contact_inputs grid">
               <div class="contact_content">
                 <label for="" class="contact_label">Name</label>
-                <input type="text" class="contact_input" />
+                <input type="text" name="Name" class="contact_input" />
               </div>
               <div class="contact_content">
                 <label for="" class="contact_label">Email</label>
-                <input type="email" class="contact_input" />
+                <input type="email" name = "Email" class="contact_input" />
               </div>
             </div>
             <div class="contact_content">
               <label for="" class="contact_label">Project</label>
-              <input type="text" class="contact_input" />
+              <input type="text" name ="Project" class="contact_input" />
             </div>
             <div class="contact_content">
               <label for="" class="contact_label">Message</label>
               <textarea
-                name=""
+                name="Message"
                 id=""
                 cols="0"
                 rows="7"
