--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
-     <link rel="icon" href="images/harish-icon.jpg" />
+     <link rel="icon" href="images/hari-icon.jpg" />
     <!-- ========================== SWIPER CSS ====================-->
     <link rel="stylesheet" href="swiper-bundle.min.css" />
     <!-- ========================== CSS ====================-->
